Adding tag option on workers

--- a/extra/gcp/external-worker-gcp-template.jinja
+++ b/extra/gcp/external-worker-gcp-template.jinja
@@ -91,6 +91,7 @@ resources:
               export VERSION="{{ properties["workerVersion"] }}"
               export DEBUG="{{ properties["debugMode"] }}"
               export WORKER_RUNTIME="{{ properties["workerRuntime"] }}"
+              export WORKER_TAG="{{ properties["workerTag"] }}"
               export WORKER_DNS_SERVER="{{ properties["workerDnsServer"] }}"
 
               # Run the startup installation script.
